--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.14",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "esbuild": "^0.17.17",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
