--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.14",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "autoprefixer": "^10.4.14",
     "esbuild": "^0.17.17",
     "postcss": "^8.4.23",
@@ -32,14 +36,14 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.2.4",
-    "tailwindcss": "^3.3.1",
-    "vite": "^4.2.0"
+    "vite": "^4.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "tailwindcss": "^3.3.2"
   },
   "browserslist": {
     "production": [
