--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "esbuild": "^0.17.17",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-calendar": "^4.2.1",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
@@ -37,6 +38,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.2.4",
+    "tailwind-styled-components": "^2.2.0",
     "vite": "^4.3.5"
   },
   "devDependencies": {
